# stylometry

./: .gitignore  01-generating-a-dataset.ipynb  02-finetuning-a-model.ipynb  03-generating-style-profile.ipynb  04-comparing-strategies.ipynb  LICENSE  README.md  inference.py  pyproject.toml
